   1. Hunger and Thirst system can now be tweeked.  See coffeemud.ini file
   2. Entering SHUTDOWN RESTART HARD will now attempt to run a restart.sh/restart.bat.
   3. GMODIFY now supports changing the CLASS of objects, including rooms.
   4. RESET RELEVEL tool added to refactor an areas level range.
   5. New skills: Studying, Tagging

# Build 5.9.5 Release 04/10/2017
   *. Database Schema Updated for CMGRAC.  See the Installation Guide about running DBUpgrade.
   1. New chants: Phosphorescence, Land Legs, BurrowSpeak, Call Companions, Animal Companion
   2. Anarchy clan govt type now has Clan Experience spell as an instant benefit.
   3. Pirates no longer regain lost limbs after death.
   4. New resource: DIRT.  Mass Grave now populates its room with the stuff.
   5. GModify now supports query-able stat "CLASSTYPE"
   6. New Skills: Wilderness Sounds, Hardiness, Stonecunning, Keenvision, Burrow Hide
   7. New Skills: Cultural Adaptation, Fast Slinging, Sling Proficiency, Diligent Studying
   8. New Prayers: Taint of Evil, Disown
   9. Centaur gets Hardiness, Drow adds Light Sensitivity and Taint of Evil, 
  10. Duergar get -10% XP, Dwarfs get Stonecunning, Elfs Keenvision
  11. Races can now have a XP adjustment, see Archon's Guide
  12. New Language: WormSpeak
  13. Gnomes get BurrowSpeak and Burrow Hide, Goblins +5% XP, Half Elfs Cultural Adaptation
  14. Racial cultural abilities now support level and auto-gain/qualify.
  15. New Spells: Darkness Globe, Untraceable, Astral Step
  16. Achievement type GOTITEM now supports NUM argument.
  17. New Properties: Prop_OpenCommand, Bad Reputation, Slow Learner
  18. ZapperMask now supports IFSTAT, CLASSTYPE, SUBNAME, WEAPONTYPE, WEAPONCLASS, WEAPONAMMO
  19. 14 new Proficiency Skills, for overriding Class Restrictions
  20. Halflings get Fast Slinging, Sling Proficiency, Humans get Diligent Studying
  21. New Skills: Devour Corpse, Tail Swipe, Long Breath, Eagle Eyes, Vicious Blow, Mind Suck