@@ -1151,10 +1151,12 @@ Example : load weapon /myclasses/blah2.class\n\r\
 Example : load class com.planet_ink.coffee_mud.Items.Weapons.Sword.class\n\r\
 Example : load weapon com/planet_ink/coffee_mud/Items/Weapons/Sword.java\n\r\
 Short(s): \n\r\
-A command for the loading of resources, faction ini files, or class files of \
-java or javascript.\n\r\
+A command for the loading of resources, faction ini files, unloaded areas, \
+or class files of java or javascript.\n\r\
 \n\r\
 Use LIST RESOURCES to see a list of resources.\n\r\
+\n\r\
+Use LOAD AREA area name re-load areas in the database that have been unloaded.\n\r\
 \n\r\
 For class files, the LIST command can also show whats already loaded.  This command \
 will automatically attempt to unload a class if it is already loaded.  If the specified \
@@ -1823,7 +1825,7 @@ any reason.
 
 UNLOAD=\
 Command  : UNLOAD\n\r\
-Usage    : UNLOAD HELP/CLASS/USER/FACTION\n\r\
+Usage    : UNLOAD HELP/CLASS/USER/FACTION/AREA\n\r\
 Usage    : UNLOAD INIFILE/ALL/[RESOURCE NAME]\n\r\
 Example  : unload help\n\r\
 Example  : unload all\n\r\
@@ -1832,7 +1834,7 @@ Example  : unload class Thief_Search\n\r\
 Example  : unload user joe\n\r\
 Short(s) : \n\r\
 Unloads most resource text, cached users, class objects, \
-coffeemud.ini, lists.ini, and help files for easy refreshing.
+areas, coffeemud.ini, lists.ini, and help files for easy refreshing.
 
 DUMPFILE=\
 Command  : DUMPFILE\n\r\
